<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="donnu.nikasov.steps.Fragments.StatisticsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:text="@string/stepsAll"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stepsStatistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/paddingStepStoryFragment"
            android:text="1341"
            android:textColor="@color/colorPrimary"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/steps" />

    </LinearLayout>

    <LinearLayout
        android:background="@color/colorSpaces"
        android:layout_width="match_parent"
        android:layout_height="6dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="130sp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/calStatistic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/paddingStepStoryFragment"
                android:text="13"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textSizeCountersFragment"
                android:textStyle="bold" />

            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ccalWalk"
                android:textSize="@dimen/textSizeCountersTextFragment" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="130sp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/distanceStatistic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/paddingStepStoryFragment"
                android:text="155"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textSizeCountersFragment"
                android:textStyle="bold" />

            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/walkDistance"
                android:textSize="@dimen/textSizeCountersTextFragment" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="130sp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/timeStatistic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/paddingStepStoryFragment"
                android:text="14"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textSizeCountersFragment"
                android:textStyle="bold" />

            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/walkTime"
                android:textSize="@dimen/textSizeCountersTextFragment" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:background="@color/colorSpaces"
        android:layout_width="match_parent"
        android:layout_height="6dp"/>

    <ListView
        android:id="@+id/statisticList"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:text="Очистить"
        android:layout_height="50dp" />

</LinearLayout>
