<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Fragments.StepsFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450sp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/stepGoal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <TextView
            android:id="@+id/stepCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/paddingStepFragment"
            android:textColor="@color/colorPrimary"
            android:textSize="55sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/steps" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="130sp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:src="@drawable/ic_ckal" />

            <TextView
                android:id="@+id/calCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/paddingStepFragment"
                android:text="13"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textSizeCountersFragment"
                android:textStyle="bold" />

            <TextView
                android:textSize="@dimen/textSizeCountersTextFragment"
                android:gravity="center"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:text="@string/ccalWalk" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="130sp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:src="@drawable/ic_dist"/>
            <TextView
                android:id="@+id/meterCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/paddingStepFragment"
                android:text="155"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textSizeCountersFragment"
                android:textStyle="bold" />

            <TextView
                android:textSize="@dimen/textSizeCountersTextFragment"
                android:gravity="center"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:text="@string/walkDistance" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="130sp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:src="@drawable/ic_time"/>

            <TextView
                android:id="@+id/timeCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/paddingStepFragment"
                android:text="14"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textSizeCountersFragment"
                android:textStyle="bold" />

            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/walkTime"
                android:textSize="@dimen/textSizeCountersTextFragment" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
